show, list, and create shows

--- a/app/views/shows/index.html.haml
+++ b/app/views/shows/index.html.haml
@@ -1,19 +1,6 @@
-%h1 Listing shows
+%h1 Our Shows
 
-%table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
+= link_to 'New Show', new_show_path if current_user && current_user.admin?
 
-  - @shows.each do |show|
-    %tr
-      %td= show.name
-      %td= link_to 'Show', show
-      %td= link_to 'Edit', edit_show_path(show)
-      %td= link_to 'Destroy', show, :confirm => 'Are you sure?', :method => :delete
+= render @shows
 
-%br
-
-= link_to 'New Show', new_show_path
