--- a/app/views/shows/_form.html.haml
+++ b/app/views/shows/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @show do |f|
+= form_for @show, :html => {:multipart => true} do |f|
   -if @show.errors.any?
     #error_explanation
       %h2= "#{pluralize(@show.errors.count, "error")} prohibited this show from being saved:"
@@ -9,5 +9,14 @@
   .field
     = f.label :name
     = f.text_field :name
+  .field
+    = f.label :slug
+    = f.text_field :slug
+  .field
+    = f.label :image
+    = f.file_field :image
+  .field
+    = f.label :description
+    = f.text_area :description, :rows => 3, :cols => 50
   .actions
     = f.submit 'Save'
