--- a/app/views/feeds/_form.html.haml
+++ b/app/views/feeds/_form.html.haml
@@ -9,5 +9,8 @@
   .field
     = f.label :name
     = f.text_field :name
+  .field
+    = f.label :slug
+    = f.text_field :slug
   .actions
     = f.submit 'Save'
