--- a/app/views/episodes/show.html.haml
+++ b/app/views/episodes/show.html.haml
@@ -1,15 +1,1 @@
-%p#notice= notice
-
-%p
-  %b Title:
-  = @episode.title
-%p
-  %b Content:
-  = @episode.content
-%p
-  %b Show:
-  = @episode.show
-
-= link_to 'Edit', edit_episode_path(@episode)
-\|
-= link_to 'Back', episodes_path
+= render :partial => "episode", :object => @episode
