--- a/app/views/episodes/_form.html.haml
+++ b/app/views/episodes/_form.html.haml
@@ -10,6 +10,9 @@
     = f.label :title
     = f.text_field :title
   .field
+    = f.label :slug
+    = f.text_field :slug
+  .field
     = f.label :copy
     = f.text_area :copy
     
@@ -22,3 +25,5 @@
       = link_to_add_fields "Add Enclosure", f, :enclosures
   .actions
     = f.submit 'Save'
+
+= javascript_include_tag "episode_form"
