add feeds to enclosures, shows to feeds, and enclosures to feeds

--- a/app/views/episodes/_enclosure_fields.html.haml
+++ b/app/views/episodes/_enclosure_fields.html.haml
@@ -2,5 +2,6 @@
   .field
     = f.label :url
     = f.text_field :url
+    = f.select :feed_id, @show.feeds.map {|feed| [feed.name, feed.id]}
     = link_to_remove_fields "remove", f
     
