--- a/app/views/episodes/_form.html.haml
+++ b/app/views/episodes/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @episode, :url => show_episodes_path(@show) do |f|
+= form_for [@show, @episode] do |f|
   -if @episode.errors.any?
     #error_explanation
       %h2= "#{pluralize(@episode.errors.count, "error")} prohibited this episode from being saved:"
